--- a/app/src/main/res/layout/activity_listar_avisos_activos.xml
+++ b/app/src/main/res/layout/activity_listar_avisos_activos.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_listar_menus"
+    android:id="@+id/activity_listar_avisos_activos"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="5dp"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.gui.personal.ListarMenusActivity">
+    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.gui.personal.MapaHospitalarioActivity">
+
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp">
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp">
+            android:layout_marginBottom="15dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -46,7 +49,7 @@
                 android:orientation="horizontal">
 
                 <Spinner
-                    android:id="@+id/cb_filtro_plantas_menu"
+                    android:id="@+id/cb_filtro_plantas_avisos"
                     android:layout_width="159dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
@@ -55,7 +58,7 @@
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_listar_menus"
+            android:id="@+id/rv_listar_avisos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
