--- a/app/src/main/res/layout/cardview_listar_avisos_activos.xml
+++ b/app/src/main/res/layout/cardview_listar_avisos_activos.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="15dp">
+    android:layout_marginBottom="15dp"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_listar_avisos_activos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cv_mis_avisos">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,7 +18,41 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimaryDark"
+                android:gravity="center_vertical|center_horizontal"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:text="@string/habitacion"
+                        android:textColor="@android:color/white"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/tv_listar_avisos_habitacion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="3dp"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:textColor="@android:color/white"
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="5dp"
@@ -27,12 +61,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/fecha_inicio_"
+                    android:text="@string/paciente_"
                     android:textColor="?android:attr/textColorPrimary"
                     android:textStyle="normal|bold" />
 
                 <TextView
-                    android:id="@+id/tv_mis_avisos_fecha_ini"
+                    android:id="@+id/tv_listar_avisos_paciente"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
@@ -45,8 +79,30 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:orientation="horizontal"
-                android:paddingTop="4dp">
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fecha_inicio_"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textStyle="normal|bold" />
+
+                <TextView
+                    android:id="@+id/tv_listar_avisos_fecha_ini"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_weight="1"
+                    android:textColor="?android:attr/textColorPrimary" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -56,7 +112,7 @@
                     android:textStyle="normal|bold" />
 
                 <TextView
-                    android:id="@+id/tv_mis_avisos_fecha_fin"
+                    android:id="@+id/tv_listar_avisos_fecha_fin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
@@ -70,11 +126,10 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="4dp"
-                android:orientation="horizontal"
-                android:paddingTop="4dp">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_mis_avisos_frecuencia"
+                    android:id="@+id/tv_listar_avisos_frecuencia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -99,7 +154,7 @@
                     android:textStyle="normal|bold" />
 
                 <TextView
-                    android:id="@+id/tv_mis_avisos_descripcion"
+                    android:id="@+id/tv_listar_avisos_descripcion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
@@ -107,5 +162,6 @@
                     android:textColor="?android:attr/textColorPrimary" />
             </LinearLayout>
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 </LinearLayout>
